# QTStudy

IDentiFy/: Main.qml  PhotoFrame.qml  backend.cpp  backend.h  cameraworker.cpp  cameraworker.h  imageprovider.h  log.rc  main.cpp
Qt/QML/IDentiFy/: CMakeLists.txt  imageprovider.cpp
ZhyMusic/: CMakeLists.txt  Main.qml  getalbuming.cpp  getalbuming.h  main.cpp  readdata.cpp  readdata.h  res.qrc
